--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
 
 body{
     margin: 0;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 /*Cabeçalho*/
@@ -75,16 +77,13 @@ body{
     width: 700px;
     opacity: 100%;
     text-shadow: 5px 5px 15px black;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 .descricao{
-    font-family: Arial, Helvetica, sans-serif;
     padding: 10px;
     font-size: 2rem;
 }
 .redes{
-    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     font-size: 2rem;
 }
@@ -94,4 +93,36 @@ body{
 .redes i{
     font-size: 3rem;
     margin-right: 10px;
+}
+/*Jogos*/
+#painel{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+.area-jogos{
+    width: 1300px;
+    margin: auto;
+}
+.jogo{
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin: 10px;
+}
+
+/*Rodape*/
+footer{
+    background-color: #0e1013;
+    position: absolute;
+    width: 100%;
+    color: white;
+    text-align: center;
+    padding: 20px 0;
+}
+
+footer a{
+    color: white;
+    text-decoration: none;
+}
+footer a:hover{
+    text-decoration: underline;
 }
