--- a/css/jogo.css
+++ b/css/jogo.css
@@ -2,7 +2,7 @@ body{
     background-color: #292f3bd5;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
-    
+    margin: 0;
 }
 .container{
     display: flex;
